feat：废弃只支持MYSQL的 SQL写法